--- a/index.html
+++ b/index.html
@@ -194,6 +194,26 @@
 
       $('.filter-list-check input').on('change',filterBirdListener);
     })
+
+    // Make overlay
+    $("#add-bird").overlay({
+      top: "1%",
+      closeOnClick: true,
+      mask: {
+        color: '#ffffff',
+        loadSpeed: 100,
+        opacity: 0.5
+      },
+    });
+
+    // When you click the add bird button, put a canned pin on the map
+    $("#add-bird-form").submit(function(e) {
+      e.preventDefault();
+      setTimeout(function() {
+        Display.birdSighting(newSighting, {animation: google.maps.Animation.DROP});
+      }, 500);
+      return false;
+    })
   });
   </script>
   <script id="bird-info-popup-template" type="text/x-handlebars-template">
@@ -267,61 +287,57 @@
   <!-- Separate container for add bird overlay -->
   <div class="container" >
     <div id="add-bird-form-bg">
-      <form id="add-bird-form" class="form-horizontal col-md-6 col-md-offset-1" role="form" action="">
+      <form id="add-bird-form" class="form-horizontal col-md-9" role="form" action="">
         <div id="close-add-bird" class="close glyphicon glyphicon-remove"></div>
-        <div class="form-group">
-          <label for="common-name">Common name</label>
-          <input type="text" placeholder="Common name" class="form-control" id="common-name">
-        </div>
-        <div class="form-group">
-          <label for="species-name">Species name</label>
-          <input type="text" placeholder="Species name" class="form-control" id="species-name">
-        </div>
-        <div class="form-group">
-          <label for="sighting-date">Date</label>
-          <input type="date" class="form-control" id="sighting-date">
-        </div>
-        <div class="form-group">
-          <label for="sighting-time">Time</label>
-          <input type="time" id="sighting-time" class="form-control">
-        </div>
-        <div class="form-group">
-          <label for="sighting-location">Location</label>
-          <input type="text" id="sighting-location" class="form-control" placeholder="Location of sighting">
-        </div>
-        <div class="form-group">
+        <div class="form-group col-md-5">
           <label for="bird-pic">Insert picture</label>
           <input type="file" id="bird-pic" class="form-control">
         </div>
-        <div class="form-group">
-          <label for="sighting-comments">Comments</label>
-          <textarea id="sighting-comments" class="form-control" rows="3" placeholder="Describe sighting"></textarea>
+        <div class="col-md-7">
+          <div class="form-group">
+            <label class="col-md-3" for="common-name">Common name</label>
+            <div class="col-md-9">
+              <input type="text" placeholder="Ex. Northern Cardinal" class="form-control" id="common-name">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-md-3" for="species-name">Species name</label>
+            <div class="col-md-9">
+              <input type="text" placeholder="Species name" class="form-control" id="species-name">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-md-3" for="sighting-date">Date</label>
+            <div class="col-md-9">
+              <input type="date" class="form-control" id="sighting-date">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-md-3" for="sighting-time">Time</label>
+            <div class="col-md-9">
+              <input type="time" id="sighting-time" class="form-control">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-md-3" for="sighting-location">Location</label>
+            <div class="col-md-9">
+              <input type="text" id="sighting-location" class="form-control" placeholder="Location of sighting">
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="col-md-3" for="sighting-comments">Comments</label>
+            <div class="col-md-9">
+              <textarea id="sighting-comments" class="form-control" rows="4" placeholder="Describe sighting"></textarea>
+            </div>
+          </div>
+          <button id="add-bird-submit" type="submit" class="btn btn-default close">Add bird</button>
         </div>
-        <button id="add-bird-submit" type="submit" class="btn btn-default close">Add bird</button>
       </form>
     </div>
   </div>
   <script>
   $(function() {
-    // I can make the overlay appear, but I can't make the mask work
-    $("#add-bird").overlay({
-      top: "1%",
-      closeOnClick: true,
-      mask: {
-        color: '#ffffff',
-        loadSpeed: 100,
-        opacity: 0.5
-      },
-    });
 
-    // When you click the add bird button, put a canned pin on the map
-    $("#add-bird-form").submit(function(e) {
-      e.preventDefault();
-      setTimeout(function() {
-        Display.birdSighting(newSighting, {animation: google.maps.Animation.DROP});
-      }, 500);
-      return false;
-    })
   })
   </script>
 </body>
