--- a/index.html
+++ b/index.html
@@ -288,7 +288,9 @@
   <div class="container" >
     <div id="add-bird-form-bg">
       <form id="add-bird-form" class="form-horizontal col-md-9" role="form" action="">
+      <div class="row">
         <div id="close-add-bird" class="close glyphicon glyphicon-remove"></div>
+      </div>
         <div class="form-group col-md-5">
           <label for="bird-pic">Insert picture</label>
           <input type="file" id="bird-pic" class="form-control">
@@ -330,7 +332,7 @@
               <textarea id="sighting-comments" class="form-control" rows="4" placeholder="Describe sighting"></textarea>
             </div>
           </div>
-          <button id="add-bird-submit" type="submit" class="btn btn-default close">Add bird</button>
+          <button id="add-bird-submit" type="submit" class="btn btn-default col-md-12 close">Add bird</button>
         </div>
       </form>
     </div>
