--- a/index.html
+++ b/index.html
@@ -219,6 +219,11 @@
       }, 500);
       return false;
     })
+
+    // Add a date picker to add bird form
+    $("#sighting-date").datepicker({
+      maxDate: new Date(),
+    });
   });
   </script>
   <script id="bird-info-popup-template" type="text/x-handlebars-template">
@@ -276,7 +281,7 @@
           <div class="col-md-4"></div>
           <div class="col-md-4" id="filter-list" style="z-index:1">
               <div class="row">&nbsp; Filtered:<div id="filters"></div></div>
-              
+
               <div class="row">&nbsp; All Birds:<div id="entire-list"></div>
               </div>
         </div>
@@ -316,7 +321,7 @@
           <div class="form-group">
             <label class="col-md-3" for="sighting-date">Date</label>
             <div class="col-md-9">
-              <input type="date" class="form-control" id="sighting-date">
+              <input type="text" class="form-control" id="sighting-date">
             </div>
           </div>
           <div class="form-group">
