autocomplete lists autoresizes and dissapears if nothing in search

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 
 <html>
 <!-- TEAM MANGO -->
@@ -289,7 +289,7 @@
           <div class="col-md-4"></div>
           <div class="col-md-4"></div>
           <div class="col-md-4" id="filter-list" style="z-index:1">
-              <div class="row">&nbsp; Autocomplete:<div id="autocomplete-answers"></div></div>
+              <div id="autocomplete-answers"></div>
               <div class="row">&nbsp; Filtered:<div id="filters"></div></div>
               
               <div class="row">&nbsp; All Birds:<div id="entire-list"></div>
