--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
   <script type="text/javascript" src="js/jquery-ui-1.10.0.custom.min.js"></script>
   <script type="text/javascript" src="js/jquery.tools.min.js"></script>
   <script type="text/javascript" src="js/handlebars-v1.3.0.js"></script>
+  <script type="text/javascript" src="js/bootstrap-timepicker.min.js"></script>
   <script type="application/json" src="birdnames.json"></script>
   <script type="text/javascript" src="js/utilities.js"></script>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link type="text/css" href="css/ui-lightness/jquery-ui-1.10.0.custom.css" rel="stylesheet" />
+  <link rel="stylesheet" href="css/bootstrap-timepicker.min.css">
   <link rel="stylesheet" type="text/css" href="css/custom.css">
   <title>birdOcular: What birds are around you?</title>
   <script type="text/javascript">
@@ -224,6 +226,13 @@
     $("#sighting-date").datepicker({
       maxDate: new Date(),
     });
+
+    //Add a time picker to add bird form
+    $("#sighting-time").timepicker({
+      minuteStep: 30,
+      showInputs: false,
+      disableFocus: true,
+    })
   });
   </script>
   <script id="bird-info-popup-template" type="text/x-handlebars-template">
@@ -327,7 +336,7 @@
           <div class="form-group">
             <label class="col-md-3" for="sighting-time">Time</label>
             <div class="col-md-9">
-              <input type="time" id="sighting-time" class="form-control">
+              <input type="text" id="sighting-time" class="input-small form-control">
             </div>
           </div>
           <div class="form-group">
