--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
     }
     google.maps.event.addDomListener(window, 'load', initialize);
 
+    //Hide autocomplete and filtered windows if empty
+    $( "#autocomplete-div" ).hide();
+    //$( "#filtered-div" ).hide();
+
     //AUTOCOMPLETE
 
     var combinedList = [];
@@ -62,11 +66,27 @@
 
     $( "#input_bar" ).keyup(function(){
         //$(this).val();
+        if (document.getElementById('input_bar').value=='') {
+            $( "#autocomplete-div" ).hide();
+        } else {
+            $( "#autocomplete-div" ).show();
+        }
         $( ".autocomplete-removable" ).remove();
         combinedList = userList.concat(birdsOnMap);
         tags = combinedList.sort(function (a, b) {
             return a.toLowerCase().localeCompare(b.toLowerCase());
         });
+  
+    });
+
+    $( "#input_bar" ).focus(function() {
+       //$( "#autocomplete-div" ).show();
+    });
+
+    $( "#input_bar" ).focusout(function() {
+       $( "#autocomplete-div" ).hide();
+       $( ".autocomplete-removable" ).remove();
+       document.getElementById('input_bar').value='';
     });
 
     $( "#input_bar" ).autocomplete({
@@ -311,8 +331,8 @@
           <div class="col-md-4"></div>
           <div class="col-md-4"></div>
           <div class="col-md-4" id="filter-list" style="z-index:1">
-              <div class="row">&nbsp; Autocomplete:<div id="autocomplete-answers"></div></div>
-              <div class="row">&nbsp; Filtered:<div id="filters"></div></div>
+              <div id="autocomplete-div" class="row">&nbsp; Autocomplete:<div id="autocomplete-answers"></div></div>
+              <div id="filtered-div" class="row">&nbsp; Filtered:<div id="filters"></div></div>
               
               <div class="row">&nbsp; All Birds:<div id="entire-list"></div>
               </div>
