--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
     //Hide autocomplete and filtered windows if empty
-    $( "#autocomplete-div" ).hide();
+    //$( "#autocomplete-div" ).hide();
     //$( "#filtered-div" ).hide();
 
 
@@ -87,8 +87,8 @@
     });
 
     $( "#input_bar" ).focusout(function() {
-       $( "#autocomplete-div" ).hide();
-       $( ".autocomplete-removable" ).remove();
+       //$( "#autocomplete-div" ).hide();
+       //$( ".autocomplete-removable" ).remove();
        document.getElementById('input_bar').value='';
     });
 
