Changes placeholder text in filter

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
           </div>
           <div class="col-md-4">
             <div class="input-group">
-              <input id="input_bar" type="text" class="form-control" placeholder="Filter by species, name, or location">
+              <input id="input_bar" type="text" class="form-control" placeholder="Filter by species or location">
               <span class="input-group-btn">
                 <button class="btn btn-default " type="button">Filter</button>
               </span>
