fix default options

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
   // Global variables to access anywhere
   var map;
   var birdSightings;
+  // There is one global infowindow, initialized in Display.init
+  var infoWindow;
   var currentBirdSightings=[]; //all current birds
   var currentFilters=[]; //list of current filters, as objects containing all necessary parameters
   var markers=[];
