--- a/index.html
+++ b/index.html
@@ -339,13 +339,13 @@
       if ($("username-entry").val() === "") {
         $("#login-form .error-message").text("Missing username");
       } else {
-        username = $("username-entry").val();
+        username = $("#username-entry").val();
+        $("#username-entry").val("");
         $("#login-form").data("overlay").close();
+        // Lol unvalidated text
+        $("#login-logout").text("Welcome " + username);
       }
     })
-
-    // For now, you can't log out
-    // When log in with text
 
     //Create an overlay that must be programatically opened and closed
     // $("#add-bird-form").overlay({
@@ -501,7 +501,7 @@
           <div class="form-group">
             <label class="col-md-3" for="species-name">Species name</label>
             <div class="col-md-9">
-              <input type="text" placeholder="Ex. Cardinalis cardinalis" class="form-control" id="species-name">
+              <input type="text" placeholder="Ex. Cardinalis cardinalis" class="form-control" id="species-name" required>
             </div>
           </div>
           <div class="form-group">
