--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
               <span class="glyphicon glyphicon-eye-open"></span>
                 &nbsp;
               <span id="username"></span>
-              <a id="login-logout" rel="#login-form">Login</a>
+              <a id="login-logout" rel="#login-form">Sign in</a>
             </big></big></big>
           </div>
           <div class="col-md-2">
@@ -561,7 +561,7 @@
     <div id="login-form-bg">
       <form id="login-form" class="form-horizontal col-md-offset-1 col-md-6" role="form" action="">
       <div class="row">
-        <h3>Sign up to add birds</h3>
+        <h3>Sign in to add birds</h3>
         <div id="close-add-bird" class="close glyphicon glyphicon-remove"></div>
       </div>
         <div class="form-group">
@@ -570,7 +570,7 @@
             <input class="form-control" id="username-entry" type="text" placeholder="Ex. BirdWatcherPerson" required>
           </div>
         </div>
-        <button id="login-submit" class="btn btn-default col-md-12" type="submit">Sign up</button>
+        <button id="login-submit" class="btn btn-default col-md-12" type="submit">Sign in</button>
       </form>
     </div>
   </div>
